# ytmedia

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/ytmedia/: __init__.py  cli.py  core.py  env.py  errors.py
src/ytmedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: tempCodeRunnerFile.py  test.py
