[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmedia"
dynamic = ["version"]
description = "Download MP4 (video+audio) and MP3 from YouTube at the highest possible quality"
readme = "README.md"
authors = [{name = "Rei WuZen"}]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["youtube", "download", "mp4", "mp3", "yt-dlp", "video", "audio"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "yt-dlp>=2024.1.0",
    "yt-dlp-ejs",
]

[project.optional-dependencies]
ffmpeg = ["static-ffmpeg>=2.5"]
all    = ["static-ffmpeg>=2.5", "yt-dlp-ejs"]

[project.scripts]
ytmedia = "ytmedia.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ytmedia"
Issues   = "https://github.com/yourusername/ytmedia/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "ytmedia.__version__"}